--- a/src/Assets/Styles/Calculator/Calculator.scss
+++ b/src/Assets/Styles/Calculator/Calculator.scss
@@ -1,3 +1,9 @@
+//VARIBLES
+$cyan: hsl(172, 67%, 45%);
+$dkCyan: hsl(183, 100%, 15%);
+$offWhite: hsl(189, 41%, 97%);
+$mdGray: hsl(184, 14%, 56%);
+
 
 //+++++++++++++++++++
 //++++MOBILE VIEW++++
@@ -7,6 +13,35 @@
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     padding: 1.5rem;
-    height: 80%;
     width: 100%;
+}
+
+.percentage-container{
+    margin: 1rem 0;
+}
+
+.percentage-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 1.5rem
+}
+
+.percentage{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: $dkCyan;
+    border-radius: 5px;
+    color: $offWhite;
+    cursor: pointer;
+    font-size: 24px;
+    height: 50px;
+    width:100%;
+
+    &--input{ 
+        background-color: $offWhite;
+        color:$mdGray;
+    }
 }
