--- a/src/Assets/Styles/AppStyles/App.css
+++ b/src/Assets/Styles/AppStyles/App.css
@@ -5,7 +5,7 @@
 }
 
 html, body, .App {
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
@@ -14,7 +14,7 @@ body {
   font-weight: 700;
 }
 
-label {
+label, span {
   display: block;
   color: #5e7a7d;
   margin-bottom: 5px;
@@ -26,7 +26,22 @@ input {
   border-radius: 5px;
   font-size: 24px;
   padding: 0.25em;
+  text-align: right;
   width: 100%;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid #26c0ab;
+}
+
+section {
+  max-width: 500px;
+}
+
+h2 {
+  color: #26c0ab;
+  font-size: 2rem;
 }
 
 .flex-row-center {
@@ -59,6 +74,6 @@ input {
 }
 
 .logo-container {
-  height: 20%;
+  padding: 4rem 0;
 }
 /*# sourceMappingURL=App.css.map */
