--- a/src/Assets/Styles/AppStyles/App.scss
+++ b/src/Assets/Styles/AppStyles/App.scss
@@ -14,7 +14,7 @@ $offWhite: hsl(189, 41%, 97%);
 }
 
 html, body, .App{
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
@@ -23,7 +23,7 @@ body{
   font-weight: 700;
 }
 
-label{
+label, span{
   display:block;
   color:$gray;
   margin-bottom: 5px;
@@ -35,7 +35,22 @@ input{
   border-radius: 5px;
   font-size: 24px;
   padding: 0.25em;
+  text-align: right;
   width: 100%;
+
+  &:focus{
+    outline:none;
+    border: 2px solid $cyan;
+  }
+}
+
+section{
+  max-width: 500px;
+}
+
+h2{
+  color:$cyan;
+  font-size: 2rem;
 }
 
 .flex-row-center{
@@ -54,5 +69,5 @@ input{
 }
 
 .logo-container{
-  height: 20%;
+  padding: 4rem 0;
 }
