--- a/src/Assets/Styles/Output/Output.css
+++ b/src/Assets/Styles/Output/Output.css
@@ -33,7 +33,23 @@
   cursor: pointer;
   font-family: "Space Mono", sans-serif;
   font-size: 24px;
-  margin-bottom: 1.5rem;
   width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+  .output-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0;
+    width: 47.5%;
+  }
 }
 /*# sourceMappingURL=Output.css.map */
