--- a/src/Assets/Styles/AppStyles/App.css
+++ b/src/Assets/Styles/AppStyles/App.css
@@ -5,7 +5,7 @@
 }
 
 html, body, .App {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -24,6 +24,7 @@ input {
   background-color: #f4fafa;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
   font-size: 24px;
   padding: 0.25em;
   text-align: right;
@@ -75,5 +76,22 @@ h2 {
 
 .logo-container {
   padding: 4rem 0;
+}
+
+@media screen and (min-width: 1000px) {
+  h2 {
+    font-size: 3rem;
+  }
+  section {
+    max-width: 900px;
+  }
+  .App {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .logo-container {
+    padding-top: 0;
+  }
 }
 /*# sourceMappingURL=App.css.map */
