--- a/src/Assets/Styles/AppStyles/App.scss
+++ b/src/Assets/Styles/AppStyles/App.scss
@@ -14,7 +14,7 @@ $offWhite: hsl(189, 41%, 97%);
 }
 
 html, body, .App{
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -33,6 +33,7 @@ input{
   background-color: $offWhite;
   border:none;
   border-radius: 5px;
+  cursor: pointer;
   font-size: 24px;
   padding: 0.25em;
   text-align: right;
@@ -70,4 +71,27 @@ h2{
 
 .logo-container{
   padding: 4rem 0;
+}
+
+
+//++++++++++++++++++++
+//++++DESKTOP VIEW++++
+//++++++++++++++++++++
+@media screen and (min-width:1000px) {
+  h2{
+    font-size: 3rem;
+  }
+
+  section{
+    max-width: 900px;
+  }
+
+  .App{
+    justify-content: center;
+  }
+
+  .logo-container{
+    padding-top: 0;
+  }
+
 }
