--- a/src/Assets/Styles/AppStyles/App.css
+++ b/src/Assets/Styles/AppStyles/App.css
@@ -21,10 +21,10 @@ label, span {
 }
 
 input {
-  background-color: #f4fafa;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-family: "Space Mono", sans-serif;
   font-size: 24px;
   padding: 0.25em;
   text-align: right;
@@ -34,6 +34,20 @@ input {
 input:focus {
   outline: none;
   border: 2px solid #26c0ab;
+}
+
+input:invalid {
+  border: 1px solid red;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 section {
