--- a/src/Assets/Styles/AppStyles/App.scss
+++ b/src/Assets/Styles/AppStyles/App.scss
@@ -30,10 +30,10 @@ label, span{
 }
 
 input{
-  background-color: $offWhite;
   border:none;
   border-radius: 5px;
   cursor: pointer;
+  font-family: "Space Mono", sans-serif;
   font-size: 24px;
   padding: 0.25em;
   text-align: right;
@@ -43,6 +43,20 @@ input{
     outline:none;
     border: 2px solid $cyan;
   }
+
+  &:invalid{
+    border:1px solid red;
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 section{
